src/types/snapshots/rnix_analyzer__types__tests__empty_array_export_nixtype.snap
---
source: src/types/mod.rs
expression: "format!(\"{}\\n=========\\n{}\", nix_code, description)"
---
[]
=========
list(unknown)
