src/types/snapshots/rnix_analyzer__types__tests__empty_attrset_nixtype.snap
---
source: src/types/mod.rs
expression: "format!(\"{}\\n=========\\n{}\", nix_code, description)"

---
{}
=========
exhaustive attrset({})
