src/types/snapshots/rnix_analyzer__types__tests__float_export_nixtype.snap
---
source: src/types/mod.rs
expression: "format!(\"{}\\n=========\\n{}\", nix_code, description)"
---
1.0
=========
float
