src/types/snapshots/rnix_analyzer__types__tests__mixed_array_export_nixtype.snap
---
source: src/types/mod.rs
expression: "format!(\"{}\\n=========\\n{}\", nix_code, description)"
---
[ 1 2.0 "3" "1" 2 3.0]
=========
list(float | int | string)
