src/types/snapshots/rnix_analyzer__types__tests__set_export_nixtype.snap
---
source: src/types/mod.rs
expression: "format!(\"{}\\n=========\\n{}\", nix_code, description)"
---
{}
=========
unknown
